--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row items-center">
             <!-- Text Section -->
             <div class="text-center text-[#8675A9] md:text-left md:w-1/2 mb-8 md:mb-0">
-                <h1 class="text-4xl font-bold mb-6">Welcome to Loki's Kitty</h1>
+                <h1 class="text-4xl font-bold mb-6">Welcome to Loki's Kitty's Arts</h1>
                 <p class="text-xl mb-4">Explore my creative world through beautiful illustrations, and feel free to
                     reach out!</p>
                 <button
